# ThaiRAGForge

./: .gitignore  CLAUDE.md  CONTEXT.md  Embedding โมเดล.docx  README.md  pyproject.toml  thai-embedding-compare.md  tickets.md
app/: streamlit_app.py
app/pages/: 1_build_run.py
config/eval/: gold_query_set.yaml  gold_query_set_73det.yaml
config/experiments/: chunker_compare_full.yaml  chunker_compare_full_fix_congen_sct_maxseqlen.yaml  chunker_compare_full_new_embedders.yaml  chunker_compare_full_new_embedders2.yaml  chunker_compare_full_new_embedders3.yaml  chunker_compare_full_new_embedders_resume.yaml  chunker_compare_full_new_embedders_resume2.yaml  chunker_compare_full_new_embedders_resume3.yaml  chunker_compare_full_new_embedders_resume4.yaml  chunker_compare_full_new_embedders_resume_qwen3.yaml  chunker_compare_full_new_embedders_resume_qwen3_2.yaml  chunker_compare_full_new_embedders_resume_qwen3_3.yaml  chunker_compare_full_resume.yaml  chunker_compare_full_semantic_rebuild.yaml  chunker_compare_smoke.yaml  dev_smoke.yaml  entity_tags_full.yaml  rq3_chunksize_sweep.yaml  rq3_normalize_ablation.yaml  rq3_segmentation_ablation.yaml
data/entity_dictionaries/: faculties.json  people.json  programs.json
docs/: PRD-indexing-retrieval-framework.md  chunker-embedder-comparison-log.md  corpus-reconciliation-log.md  entity-extraction-and-gold-eval-log.md  grill-session-2026-07-01.md  llm-ocr-scan-log.md  ocr-corruption-detection-strategies.md  paper-results-summary.md  req0-original-spec.md  reranker-hybrid-interaction-research.md  research-framework-gap-analysis.md
docs/adr/: 0001-scope-retrieval-and-index-retrieve-split.md  0002-resolution-level-relevance.md  0003-meeting-manifest-metadata.md  0004-curriculum-bundle-splitting.md
docs/agents/: domain.md  issue-tracker.md  (+1 more)
tests/: fakes.py  test_api_embedder.py  test_artifact_store.py  test_bm25_retriever.py  test_build_metadata.py  test_build_program_dictionary.py  test_cache.py  test_canonicalize_people.py  test_chunker_invariants.py  test_combos.py  test_config.py  test_consensus_review_app.py  test_consensus_review_logic.py  test_course_loader.py  test_cross_encoder_reranker.py  test_dense_retriever.py  test_e5_embedder.py  test_embedders.py  test_entity_filter.py  test_entity_lookup_retriever.py  test_factory.py  test_faculty_loader.py  test_fixed_size_chunker.py  test_hybrid_retriever.py  test_index_select.py  test_jina_v5_embedder.py  test_lexical_build.py  test_loader_cache_key.py  test_loader_integration.py  test_loaders_common.py  test_local_st_embedder.py  test_manifest.py  test_metadata_filter.py  test_metadata_loader.py  test_metrics.py  test_ner_loader.py  test_page_boundaries.py  test_person_loader.py  test_pipeline_retrieve.py  test_plain_loader.py  (+25 more)
(+116 files in other folders)
