[project]
name = "rag"
version = "0.1.0"
description = "Modular indexing + retrieval experimentation framework for Thai academic-council resolutions"
readme = "README.md"
requires-python = ">=3.13"

# Base = corpus-preparation tooling (tools/corpus_prep/): scrape + OCR + cleanup.
dependencies = [
    "ollama>=0.6.1",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "typhoon-ocr>=0.4.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

# Framework deps live in a separate group so corpus-prep stays lightweight.
# Install with: uv sync --extra lab   (or  pip install -e ".[lab]")
[project.optional-dependencies]
lab = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    "pythainlp>=5.0",
    "langchain-text-splitters>=0.2",
    "typer>=0.12",
    "streamlit>=1.36",
    "loguru>=0.7",
    "tqdm>=4.66",
]
