[project]
name = "rag"
version = "0.1.0"
description = "Modular indexing + retrieval experimentation framework for Thai academic-council resolutions"
readme = "README.md"
requires-python = ">=3.13"

# Base = corpus-preparation tooling (tools/corpus_prep/): scrape + OCR + cleanup.
dependencies = [
    "ollama>=0.6.1",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "typhoon-ocr>=0.4.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.117.0",
    "python-dotenv>=1.2.2",
]

# Framework deps live in a separate group so corpus-prep stays lightweight.
# Install with: uv sync --extra lab   (or  pip install -e ".[lab]")
[project.optional-dependencies]
lab = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "torch>=2.0",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    "pythainlp>=5.0",
    "python-crfsuite>=0.9.11",  # pythainlp crfcut Thai sentence tokenizer
    "langchain-text-splitters>=0.2",
    "typer>=0.12",
    "streamlit>=1.36",
    "loguru>=0.7",
    "tqdm>=4.66",
    "qdrant-client>=1.18.0",
]

# Test/dev tooling (installed by `uv sync` by default alongside the project).
[dependency-groups]
dev = [
    "pytest>=8.0",
]

# This repo is a workspace of scripts + an importable src/ package, not a
# distributable wheel — don't try to build/install the root as a package.
[tool.uv]
package = false

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
